log
Mon 08 May 2023 06:06:21 PM UTC: 
 tests:  0|4
total_score: 0/70
fbc7447
Mon 08 May 2023 06:09:30 PM UTC: 
 heap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:21: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   39 |     heap->heapArray = (int*)malloc(sizeof(int) * 3);
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
f919c6f
Mon 08 May 2023 06:09:53 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4c9ee5c
Mon 08 May 2023 06:10:11 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:21: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   39 |     heap->heapArray = (int*)malloc(sizeof(int) * 3);
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
ce51526
Mon 08 May 2023 06:10:58 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:21: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘Heap *’ {aka ‘struct Heap *’} [-Werror=incompatible-pointer-types]
   39 |     heap->heapArray = (Heap*)malloc(sizeof(int) * 3);
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
e9021fa
Mon 08 May 2023 06:11:08 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:21: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘Heap *’ {aka ‘struct Heap *’} [-Werror=incompatible-pointer-types]
   39 |     heap->heapArray = (Heap*)malloc(sizeof(Heap) * 3);
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
2de1cec
Mon 08 May 2023 06:11:22 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:21: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   39 |     heap->heapArray = (int*)malloc(sizeof(int) * 3);
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
1514c6f
Mon 08 May 2023 06:11:59 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
3c5be27
Mon 08 May 2023 06:14:37 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:32:11: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘count’
   32 |     if (pq->count == 0) {
      |           ^~
heap.c:33:16: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   33 |         return NULL;
      |                ^~~~
heap.c:31:6: note: declared here
   31 | void heap_pop(Heap* pq){
      |      ^~~~~~~~
heap.c:35:14: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘data’
   35 |     return pq->data[0];
      |              ^~
heap.c:35:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   35 |     return pq->data[0];
      |            ^~
heap.c:31:6: note: declared here
   31 | void heap_pop(Heap* pq){
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bd57458
